rust/cymbal/crates/server/tests/snapshots/pipeline_snapshots__empty_batch_format_matches_snapshot.snap
---
source: cymbal/crates/server/tests/pipeline_snapshots.rs
expression: "snapshot_payload(&request, &results)"
---
{
  "request": {
    "context": {
      "batch_id": "empty-batch-snapshot",
      "metadata": {
        "source": "snapshot-test"
      }
    },
    "events": [],
    "options": null
  },
  "results": []
}
