rust/cymbal/crates/server/tests/snapshots/pipeline_snapshots__rate_limited_events_format_matches_snapshot.snap
---
source: cymbal/crates/server/tests/pipeline_snapshots.rs
expression: "snapshot_payload(&request, &results)"
---
{
  "request": {
    "context": {
      "batch_id": "rate-limited-snapshot",
      "metadata": {
        "source": "snapshot-test"
      }
    },
    "events": [
      {
        "distinct_id": "distinct-allowed-event",
        "event_id": "allowed-event",
        "properties_json": {
          "$exception_list": [
            {
              "stacktrace": {
                "frames": [
                  {
                    "colno": 5,
                    "filename": "app.js",
                    "function": "runExample",
                    "lineno": 10
                  }
                ]
              },
              "type": "Error",
              "value": "allowed through limiter"
            }
          ],
          "$exception_message": "allowed through limiter",
          "$exception_type": "Error"
        },
        "team_id": 1
      },
      {
        "distinct_id": "distinct-limited-event",
        "event_id": "limited-event",
        "properties_json": {
          "$exception_list": [
            {
              "stacktrace": {
                "frames": [
                  {
                    "colno": 5,
                    "filename": "app.js",
                    "function": "runExample",
                    "lineno": 10
                  }
                ]
              },
              "type": "Error",
              "value": "limited by limiter"
            }
          ],
          "$exception_message": "limited by limiter",
          "$exception_type": "Error"
        },
        "team_id": 1
      }
    ],
    "options": null
  },
  "results": [
    {
      "event_id": "allowed-event",
      "metadata": {},
      "outcome": "Next",
      "properties_json": {
        "$exception_fingerprint": "4dfd42b797a87e6a46f721db3399d3edccfa63a735570fb9b5289203e1825e8c36acec51532e78283c2511dce6fbc176b0c9f9f86e0f7b09052264b04f732b41",
        "$exception_fingerprint_record": [
          {
            "id": "allowed-event:0",
            "pieces": [
              "Exception Type"
            ],
            "type": "exception"
          },
          {
            "pieces": [
              "Source file name",
              "Mangled function name",
              "Line number",
              "Column number"
            ],
            "raw_id": "",
            "type": "frame"
          }
        ],
        "$exception_functions": [
          "runExample"
        ],
        "$exception_handled": false,
        "$exception_list": [
          {
            "id": "allowed-event:0",
            "stacktrace": {
              "frames": [
                {
                  "colno": 5,
                  "filename": "app.js",
                  "function": "runExample",
                  "lineno": 10
                }
              ]
            },
            "type": "Error",
            "value": "allowed through limiter"
          }
        ],
        "$exception_message": "allowed through limiter",
        "$exception_proposed_fingerprint": "4dfd42b797a87e6a46f721db3399d3edccfa63a735570fb9b5289203e1825e8c36acec51532e78283c2511dce6fbc176b0c9f9f86e0f7b09052264b04f732b41",
        "$exception_sources": [
          "app.js"
        ],
        "$exception_type": "Error",
        "$exception_types": [
          "Error"
        ],
        "$exception_values": [
          "allowed through limiter"
        ]
      }
    },
    {
      "event_id": "limited-event",
      "outcome": "Drop",
      "reason": "rate_limited:team_id"
    }
  ]
}
